--- a/index.html
+++ b/index.html
@@ -9,72 +9,113 @@
 </head>
 
 <body>
-    <section class="login-page">
-        <div class="login-container">
-            <div class="login">
-                <div class="image-login">
-                    <img src="./assets/images/estoque-logo.png" alt="">
-                </div>
-                <div class="form-box">
-                    <input type="text" name="login" placeholder="Usuario:">
-                    <input type="text" name="password" placeholder="Senha:">
+    <section id="loginD" class="section-display active">
+        <section class="login-page">
+            <div class="login-container">
+                <div class="login">
+                    <div class="image-login">
+                        <img src="./assets/images/estoque-logo.png" alt="">
+                    </div>
+                    <div class="form-box">
+                        <input type="text" name="login" placeholder="Usuario:">
+                        <input type="text" name="password" placeholder="Senha:">
+                    </div>
                 </div>
             </div>
-        </div>
-        <button class="login-btn">LOGIN</button>
+            <button class="login-btn" onclick="login()">LOGIN</button>
+        </section>
     </section>
 
-    <section class="home-page">
-        <div class="lateral-bar">
-            <nav>
-                <ul>
-                    <li class="btn-nav">produtos</li>
-                    <li class="btn-nav">movimentação</li>
-                    <li class="btn-nav">relatório</li>
-                </ul>
-            </nav>
-        </div>
-        <div class="background">
-            <p>CONTROLE <br>DE <br>ESTOQUE</p>
-        </div>
-
-        <div class="background-produtos">
-            <div class="title-produtos">
-                <li>PRODUTOS</li>
-            </div>
-            <div class="options-menu">
-                <nav class="edit-products">
-                    <button class="edit-btn">Incluir</button>
-                    <button class="edit-btn">Alterar</button>
-                    <button class="edit-btn">Excluir</button>
-                </nav>
-                <nav class="search">
-                    <input type="text" placeholder="PESQUISA" name="search">
+    <section id="homePage" class="section-display">
+        <section class="home-page">
+            <div class="lateral-bar">
+                <nav>
+                    <ul>
+                        <li class="btn-nav" onclick="produtos()">produtos</li>
+                        <li class="btn-nav" onclick="movimentacao()">movimentação</li>
+                        <li class="btn-nav">relatório</li>
+                    </ul>
                 </nav>
             </div>
-            <div class="table">
-                <div class="title-line">
-                    <div class="code">CÓDIGO</div>
-                    <div class="name">NOME</div>
-                    <div class="type">TIPO</div>
-                    <div class="amount">QUANTIDADE</div>
+            <section class="section-display">
+                <div class="background">
+                    <p>CONTROLE <br>DE <br>ESTOQUE</p>
                 </div>
-                <div class="product-line">
-                    <div class="code">1</div>
-                    <div class="name">TECLADO GAMER REDRAGON</div>
-                    <div class="type">ELETRONICO</div>
-                    <div class="amount">3</div>
+            </section>
+        
+                <div class="background-produtos">
+                    <div class="title-produtos">
+                        <li>PRODUTOS</li>
+                    </div>
+                    <div class="options-menu">
+                        <nav class="edit-products">
+                            <button class="edit-btn">Incluir</button>
+                            <button class="edit-btn">Alterar</button>
+                            <button class="edit-btn">Excluir</button>
+                        </nav>
+                        <nav class="search">
+                            <input type="text" placeholder="PESQUISA" name="search">
+                        </nav>
+                    </div>
+                    <div class="table">
+                        <div class="title-line">
+                            <div class="code">CÓDIGO</div>
+                            <div class="name">NOME</div>
+                            <div class="type">TIPO</div>
+                            <div class="amount">QUANT.</div>
+                        </div>
+                        <div class="product-line">
+                            <div class="code">1</div>
+                            <div class="name">TECLADO GAMER REDRAGON</div>
+                            <div class="type">ELETRONICO</div>
+                            <div class="amount">3</div>
+                        </div>
+                        <div class="product-line">
+                            <div class="code">2</div>
+                            <div class="name">MONITOR ULTRAWIDE 25PL</div>
+                            <div class="type">ELETRONICO</div>
+                            <div class="amount">4</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="product-line">
-                    <div class="code">2</div>
-                    <div class="name">MONITOR ULTRAWIDE 25PL</div>
-                    <div class="type">ELETRONICO</div>
-                    <div class="amount">4</div>
+        
+            <div class="background-movimentacao">
+                <div class="title-produtos">
+                    <li>MOVIMENTAÇÃO</li>
+                </div>
+                <div class="options-menu">
+                    <nav class="edit-products">
+                        <button class="edit-btn">Incluir</button>
+                        <button class="edit-btn">Excluir</button>
+                    </nav>
+                    <nav class="search">
+                        <input type="text" placeholder="PESQUISA" name="search">
+                    </nav>
+                </div>
+                <div class="table">
+                    <div class="title-line">
+                        <div class="code">CÓDIGO</div>
+                        <div class="code">COD.PRO</div>
+                        <div class="name">OBSERVAÇÃO</div>
+                        <div class="type">TIPO</div>
+                        <div class="amount">QUANT.</div>
+                        <div class="date">DATA</div>
+                    </div>
+                    <div class="product-line">
+                        <div class="code">1</div>
+                        <div class="code">2</div>
+                        <div class="name">TECLADO GAMER REDRAGON</div>
+                        <div class="type">ELETRONICO</div>
+                        <div class="amount">3</div>
+                        <div class="code">03/06/2024</div>
+                    </div>
                 </div>
             </div>
-        </div>
-
+        </section>
     </section>
+
+
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
