--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </ul>
                 </nav>
             </div>
-            <section class="section-display">
+            <section id="background" class="section-display">
                 <div class="background">
                     <p>CONTROLE <br>DE <br>ESTOQUE</p>
                 </div>
