--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <div class="background-produtos">
                     <div class="title-produtos">
-                        <li>PRODUTOS</li>
+                        <span>PRODUTOS</span>
                     </div>
                     <div class="options-menu">
                         <nav class="edit-products">
@@ -61,7 +61,7 @@
                     <section id="incluirProd" class="incluir-display">
                         <div class="incluir">
                             <div class="incluir-produtos">
-                                <li>PRODUTOS</li>
+                                <span>PRODUTOS</span>
                             </div>
                             <div class="inputs-incluir">
                                 <div class="input-box">
@@ -104,7 +104,7 @@
         
             <div class="background-movimentacao">
                 <div class="title-produtos">
-                    <li>MOVIMENTAÇÃO</li>
+                    <span>MOVIMENTAÇÃO</span>
                 </div>
                 <div class="options-menu">
                     <nav class="edit-products">
@@ -119,7 +119,7 @@
                 <section id="incluirMov" class="incluir-display ">
                     <div class="incluir">
                         <div class="incluir-produtos">
-                            <li>MOVIMENTAÇÃO</li>
+                            <span>MOVIMENTAÇÃO</span>
                         </div>
                         <div class="inputs-incluir">
                             <div class="input-box">
@@ -155,7 +155,7 @@
                         <div class="code">1</div>
                         <div class="code">2</div>
                         <div class="name">TECLADO GAMER REDRAGON</div>
-                        <div class="type">ELETRONICO</div>
+                        <div class="type">ENTRADA</div>
                         <div class="amount">3</div>
                         <div class="code">03/06/2024</div>
                     </div>
