--- a/index.html
+++ b/index.html
@@ -43,72 +43,14 @@
                 </div>
             </section>
 
-                <div class="background-produtos">
-                    <div class="title-produtos">
-                        <span>PRODUTOS</span>
-                    </div>
-                    <div class="options-menu">
-                        <nav class="edit-products">
-                            <button class="edit-btn" onclick="incluirProd()">Incluir</button>
-                            <button class="edit-btn">Alterar</button>
-                            <button class="edit-btn">Excluir</button>
-                        </nav>
-                        <nav class="search">
-                            <input type="text" placeholder="PESQUISA" name="search">
-                        </nav>
-                    </div>
-
-                    <section id="incluirProd" class="incluir-display">
-                        <div class="incluir">
-                            <div class="incluir-produtos">
-                                <span>PRODUTOS</span>
-                            </div>
-                            <div class="inputs-incluir">
-                                <div class="input-box">
-                                    <label for="nome">NOME</label>
-                                    <input type="text" name="nome">
-                                </div>
-                                <div class="input-box">
-                                    <label for="type">TIPO</label>
-                                    <input type="text" name="type">
-                                </div>
-                            </div>
-                            <div class="incluir-options">
-                                <button id="fechar-prod" class="fechar -btn" onclick="fecharProd()">CANCELAR</button>
-                                <button id="enviar-prod" class="enviar -btn">ENVIAR</button>
-                            </div>
-                        </div>
-                    </section>
-
-                    <div class="table">
-                        <div class="title-line">
-                            <div class="code">CÓDIGO</div>
-                            <div class="name">NOME</div>
-                            <div class="type">TIPO</div>
-                            <div class="amount">QUANT.</div>
-                        </div>
-                        <div class="product-line">
-                            <div class="code">1</div>
-                            <div class="name">TECLADO GAMER REDRAGON</div>
-                            <div class="type">ELETRONICO</div>
-                            <div class="amount">3</div>
-                        </div>
-                        <div class="product-line">
-                            <div class="code">2</div>
-                            <div class="name">MONITOR ULTRAWIDE 25PL</div>
-                            <div class="type">ELETRONICO</div>
-                            <div class="amount">4</div>
-                        </div>
-                    </div>
-                </div>
-        
-            <div class="background-movimentacao">
+            <div class="background-produtos">
                 <div class="title-produtos">
-                    <span>MOVIMENTAÇÃO</span>
+                    <span>PRODUTOS</span>
                 </div>
                 <div class="options-menu">
                     <nav class="edit-products">
-                        <button class="edit-btn" onclick="incluirMov()">Incluir</button>
+                        <button class="edit-btn" onclick="incluirProd()">Incluir</button>
+                        <button class="edit-btn">Alterar</button>
                         <button class="edit-btn">Excluir</button>
                     </nav>
                     <nav class="search">
@@ -116,56 +58,108 @@
                     </nav>
                 </div>
 
-                <section id="incluirMov" class="incluir-display ">
+                <section id="incluirProd" class="incluir-display">
                     <div class="incluir">
                         <div class="incluir-produtos">
-                            <span>MOVIMENTAÇÃO</span>
+                            <span>PRODUTOS</span>
                         </div>
-                        <div class="inputs-incluir">
+                        <form id="formProdutos" class="inputs-incluir">
                             <div class="input-box">
                                 <label for="nome">NOME</label>
-                                <input type="text" name="nome">
-                            </div>
-                            <div class="input-box">
-                                <label for="amount">QUANTIDADE</label>
-                                <input type="text" name="amount">
+                                <input id="nomeProd" class="inputsProd" type="text" name="nome" required>
                             </div>
                             <div class="input-box">
                                 <label for="type">TIPO</label>
-                                <input type="text" name="type">
+                                <input id="tipoProd" class="inputsProd" type="text" name="type" required>
                             </div>
-                        </div>
+                            <div class="input-box">
+                                <label for="amount">QUANTIDADE</label>
+                                <input id="quantProd" class="inputsProd" type="text" name="type" required>
+                            </div>
+                        </form>
                         <div class="incluir-options">
-                            <button id="fechar-mov" class="fechar -btn" onclick="fecharMov()">CANCELAR</button>
-                            <button id="enviar-mov" class="enviar -btn">ENVIAR</button>
+                            <button id="fechar-prod" class="fechar -btn" onclick="fecharProd()">CANCELAR</button>
+                            <button id="enviar-prod" class="enviar -btn">ENVIAR</button>
                         </div>
                     </div>
                 </section>
 
-                <div class="table">
+                <div  class="table">
                     <div class="title-line">
                         <div class="code">CÓDIGO</div>
-                        <div class="code">COD.PRO</div>
-                        <div class="name">OBSERVAÇÃO</div>
+                        <div class="name">NOME</div>
                         <div class="type">TIPO</div>
                         <div class="amount">QUANT.</div>
-                        <div class="date">DATA</div>
                     </div>
-                    <div class="product-line">
-                        <div class="code">1</div>
-                        <div class="code">2</div>
-                        <div class="name">TECLADO GAMER REDRAGON</div>
-                        <div class="type">ENTRADA</div>
-                        <div class="amount">3</div>
-                        <div class="code">03/06/2024</div>
+                    <div id="tableProd" class="boxItens">
                     </div>
                 </div>
-            </div>
+
+                <div class="background-movimentacao">
+                    <div class="title-produtos">
+                        <span>MOVIMENTAÇÃO</span>
+                    </div>
+                    <div class="options-menu">
+                        <nav class="edit-products">
+                            <button class="edit-btn" onclick="incluirMov()">Incluir</button>
+                            <button class="edit-btn">Excluir</button>
+                        </nav>
+                        <nav class="search">
+                            <input type="text" placeholder="PESQUISA" name="search">
+                        </nav>
+                    </div>
+
+                    <section id="incluirMov" class="incluir-display ">
+                        <div class="incluir">
+                            <div class="incluir-produtos">
+                                <span>MOVIMENTAÇÃO</span>
+                            </div>
+                            <div class="inputs-incluir">
+                                <div class="input-box">
+                                    <label for="nome">NOME</label>
+                                    <input type="text" name="nome">
+                                </div>
+                                <div class="input-box">
+                                    <label for="amount">QUANTIDADE</label>
+                                    <input type="text" name="amount">
+                                </div>
+                                <div class="input-box">
+                                    <label for="type">TIPO</label>
+                                    <input type="text" name="type">
+                                </div>
+                            </div>
+                            <div class="incluir-options">
+                                <button id="fechar-mov" class="fechar -btn" onclick="fecharMov()">CANCELAR</button>
+                                <button id="enviar-mov" class="enviar -btn">ENVIAR</button>
+                            </div>
+                        </div>
+                    </section>
+
+                    <div class="table">
+                        <div class="title-line">
+                            <div class="code">CÓDIGO</div>
+                            <div class="code">COD.PRO</div>
+                            <div class="name">OBSERVAÇÃO</div>
+                            <div class="type">TIPO</div>
+                            <div class="amount">QUANT.</div>
+                            <div class="date">DATA</div>
+                        </div>
+                        <div class="product-line">
+                            <div class="code">1</div>
+                            <div class="code">2</div>
+                            <div class="name">TECLADO GAMER REDRAGON</div>
+                            <div class="type">ENTRADA</div>
+                            <div class="amount">3</div>
+                            <div class="code">03/06/2024</div>
+                        </div>
+                    </div>
+                </div>
         </section>
     </section>
 
 
     <script src="./assets/script.js"></script>
+    <script src="./produtosDB.js"></script>
 </body>
 
 </html>
