--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <section id="loginD" class="section-display active">
+    <section id="loginD" class="section-display active"  style="background-color: #4da8cf;">
         <section class="login-page">
-            <div class="login-container">
+            <div class="login-container"  style="background-color: #fff;">
                 <div class="login">
                     <div class="image-login">
                         <img src="./assets/images/estoque-logo.png" alt="">
@@ -30,7 +30,7 @@
 
     <section id="homePage" class="section-display">
         <section class="home-page">
-            <div class="lateral-bar">
+            <div class="lateral-bar" style="background-color: #4da8cf;">
                 <nav>
                     <ul>
                         <li class="btn-nav" onclick="produtos()">produtos</li>
@@ -40,12 +40,12 @@
                 </nav>
             </div>
             <section id="background" class="section-display">
-                <div class="background">
+                <div class="background ">
                     <p>CONTROLE <br>DE <br>ESTOQUE</p>
                 </div>
             </section>
 
-            <div class="background-produtos">
+            <div class="background-produtos" style="background-color: #c3e3fd;">
                 <div class="title-produtos">
                     <span>PRODUTOS</span>
                 </div>
@@ -66,7 +66,7 @@
                         <form id="formProdutos" class="inputs-incluir">
                             <div class="input-box">
                                 <label for="nome">NOME</label>
-                                <input id="nomeProd" class="inputsProd" type="text" name="nome" required>
+                            <input id="nomeProd" class="inputsProd" type="text" data-index="new" name="nome" required>
                             </div>
                             <div class="input-box">
                                 <label for="type">TIPO</label>
@@ -98,7 +98,7 @@
                 </div>
             </div>
 
-            <div class="background-movimentacao">
+            <div class="background-movimentacao" style="background-color: #c3e3fd;">
                 <div class="title-produtos">
                     <span>MOVIMENTAÇÃO</span>
                 </div>
