--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <section id="loginD" class="section-display active"  style="background-color: #4da8cf;">
+    <section id="loginD" class="section-display active">
         <section class="login-page">
-            <div class="login-container"  style="background-color: #fff;">
+            <div class="login-container">
                 <div class="login">
                     <div class="image-login">
                         <img src="./assets/images/estoque-logo.png" alt="">
@@ -30,7 +30,7 @@
 
     <section id="homePage" class="section-display">
         <section class="home-page">
-            <div class="lateral-bar" style="background-color: #4da8cf;">
+            <div class="lateral-bar">
                 <nav>
                     <ul>
                         <li class="btn-nav" onclick="produtos()">produtos</li>
@@ -45,7 +45,7 @@
                 </div>
             </section>
 
-            <div class="background-produtos" style="background-color: #c3e3fd;">
+            <div class="background-produtos">
                 <div class="title-produtos">
                     <span>PRODUTOS</span>
                 </div>
@@ -66,7 +66,8 @@
                         <form id="formProdutos" class="inputs-incluir">
                             <div class="input-box">
                                 <label for="nome">NOME</label>
-                            <input id="nomeProd" class="inputsProd" type="text" data-index="new" name="nome" required>
+                                <input id="nomeProd" class="inputsProd" type="text" data-index="new" name="nome"
+                                    required>
                             </div>
                             <div class="input-box">
                                 <label for="type">TIPO</label>
@@ -98,14 +99,13 @@
                 </div>
             </div>
 
-            <div class="background-movimentacao" style="background-color: #c3e3fd;">
+            <div class="background-movimentacao">
                 <div class="title-produtos">
                     <span>MOVIMENTAÇÃO</span>
                 </div>
                 <div class="options-menu">
                     <nav class="edit-products">
                         <button class="edit-btn" onclick="incluirMov()">Incluir</button>
-                        <button class="edit-btn">Excluir</button>
                     </nav>
                     <nav class="search">
                         <input type="text" placeholder="PESQUISA" name="search">
