--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
                         <form id="formProdutos" class="inputs-incluir">
                             <div class="input-box">
                                 <label for="nome">NOME</label>
-                                <input id="nomeProd" class="inputsProd" type="text" data-index="new" name="nome"
-                                    required>
+                                <input id="nomeProd" data-index="new" class="inputsProd" type="text" data-index="new" name="nome" placeholder="Nome do produto" required>
                             </div>
                             <div class="input-box">
                                 <label for="type">TIPO</label>
-                                <input id="tipoProd" class="inputsProd" type="text" name="type" required>
+                                <input id="tipoProd" class="inputsProd" type="text" name="type"  placeholder="Tipo do produto" required>
                             </div>
                             <div class="input-box">
                                 <label for="amount">QUANTIDADE</label>
-                                <input id="quantProd" class="inputsProd" type="text" name="type" required>
+                                <input id="quantProd" class="inputsProd" type="text" name="type"  placeholder="Quantidade de produtos" required>
                             </div>
                         </form>
                         <div class="incluir-options">
