--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="shortcut icon" href="./assets/images/estoque-logo.png" type="image/x-icon">
     <title>Controle de estoque</title>
 </head>
 
